--- a/web-application/src/app/component/home/home.component.html
+++ b/web-application/src/app/component/home/home.component.html
@@ -1,7 +1,20 @@
-<h3 style="text-align: center; margin-top: 200px; color: grey">
-  Welcome to Microservices Sample!!
+<h3 style="text-align: center; margin-top: 20px; color: grey">
+  Welcome to Devops Training!!
 </h3>
-<div style="text-align:center; font-family:roboto; font-size: 15px; margin-top: 20px; color: grey">
-  Click on the the one, two or three to get the<br/>
-  response from the respective microservice.
+<div style="font-family:roboto; font-size: 15px; margin-top: 20px; color: grey">
+  <u>Technology Used</u><br/>
+<ul>
+    <li>SpringBoot - Application framework
+    <li>Zuul - API Gateway (Load Balancer)
+    <li>Consul - Service registration and Discovery
+    <li>Docker - Containerization platform
+    <li>RabbitMQ - asynchronous microservices messaging.
+    <li>Logstash - Log collector
+    <li>Elasticsearch - Log indexer
+    <li>Kibana - Data visualization
+    <li>Angular - HTML enhanced for web apps!
+    <li>Bootstrap - great UI boilerplate for modern web apps
+    <li>jQuery - HTML document traversal and manipulation
+    <li>Swagger - API 
+  </ul>
 </div>
