--- a/web-application/src/app/component/root/app.component.html
+++ b/web-application/src/app/component/root/app.component.html
@@ -1,9 +1,12 @@
 <app-header></app-header>
 <div class="container" role="main" style="padding-top: 60px;">
-<div class="wrapper">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-11">
-    <app-menu></app-menu>
-    <router-outlet></router-outlet>
+  <div class="wrapper">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-11">
+      <app-menu></app-menu>
+      <div class="main">
+        <router-outlet></router-outlet>
+      </div>
+      
+    </div>
   </div>
-</div>
 </div>
